tdf#134270 rearrange so we know the final treeview width

so we can unconditionally use the treeview width as the optimized
pre-calculated row width hint and then fix up the gen fixed column
settings to take account of the auto CHK_BTN mode

Change-Id: I2e1eaf4b1121d5e705eb7db3464f123c038db246